addNonTerminal and addTerminal methods developed

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,7 @@ javadoc.noindex=false
 javadoc.private=false
 javadoc.author=false
 endorsed.classpath=
-main.class=
+main.class=es.ceu.gisi.modcomp.cyk_algorithm.algorithm.CYKAlgorithm
 junit.selected.version=4
 source.encoding=UTF-8
 javac.source=17
